Updated path to https://api.pocketstop.com/

--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\Pocketstop.Api\packages.config" />
   <repository path="..\TestConsole\packages.config" />
+  <repository path="..\Pocketstop.Api.Net20\packages.config" />
 </repositories>
