--- a/src/Pocketstop.Api.Net40/Pocketstop.Api.Net40.csproj
+++ b/src/Pocketstop.Api.Net40/Pocketstop.Api.Net40.csproj
@@ -34,6 +34,9 @@
     <DocumentationFile>bin\Release\Pocketstop.Api.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="JsonFx">
+      <HintPath>..\packages\JsonFx.2.0.1106.2610\lib\net40\JsonFx.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.4.0.4\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -43,7 +46,6 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -52,20 +54,8 @@
     <Compile Include="..\Pocketstop.Api\Core.cs">
       <Link>Core.cs</Link>
     </Compile>
-    <Compile Include="..\Pocketstop.Api\Model\ComparisonType.cs">
-      <Link>Model\ComparisonType.cs</Link>
-    </Compile>
-    <Compile Include="..\Pocketstop.Api\Model\RestException.cs">
-      <Link>Model\RestException.cs</Link>
-    </Compile>
-    <Compile Include="..\Pocketstop.Api\Model\SmsMessage.cs">
-      <Link>Model\SmsMessage.cs</Link>
-    </Compile>
-    <Compile Include="..\Pocketstop.Api\Model\PocketstopBase.cs">
-      <Link>Model\PocketstopBase.cs</Link>
-    </Compile>
-    <Compile Include="..\Pocketstop.Api\Model\PocketstopListBase.cs">
-      <Link>Model\PocketstopListBase.cs</Link>
+    <Compile Include="..\Pocketstop.Api\Infrastructure\JsonFxDeserializer.cs">
+      <Link>Infrastructure\JsonFxDeserializer.cs</Link>
     </Compile>
     <Compile Include="..\Pocketstop.Api\Properties\AssemblyInfo.cs">
       <Link>AssemblyInfo.cs</Link>
