--- a/src/Pocketstop.Api.Net40/packages.config
+++ b/src/Pocketstop.Api.Net40/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-	<package id="Newtonsoft.Json" version="4.0.4" />
-	<package id="RestSharp" version="102.5" />
+  <package id="JsonFx" version="2.0.1106.2610" />
+  <package id="Newtonsoft.Json" version="4.0.4" />
+  <package id="RestSharp" version="102.5" />
 </packages>
