--- a/src/Pocketstop.Api/Pocketstop.Api.csproj
+++ b/src/Pocketstop.Api/Pocketstop.Api.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Pocketstop</RootNamespace>
     <AssemblyName>Pocketstop.Api</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
   </PropertyGroup>
@@ -32,6 +32,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="JsonFx">
+      <HintPath>..\packages\JsonFx.2.0.1106.2610\lib\net40\JsonFx.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.4.0.4\lib\net35\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -47,11 +51,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core.cs" />
-    <Compile Include="Model\ComparisonType.cs" />
-    <Compile Include="Model\RestException.cs" />
-    <Compile Include="Model\SmsMessage.cs" />
-    <Compile Include="Model\PocketstopBase.cs" />
-    <Compile Include="Model\PocketstopListBase.cs" />
+    <Compile Include="Extensions\ExpandoExtensions.cs" />
+    <Compile Include="Infrastructure\JsonFxDeserializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sms.cs" />
   </ItemGroup>
