Added missing link to Net40 project and updated .nuspec

--- a/src/Pocketstop.Api.Net40/Pocketstop.Api.Net40.csproj
+++ b/src/Pocketstop.Api.Net40/Pocketstop.Api.Net40.csproj
@@ -60,6 +60,9 @@
     <Compile Include="..\Pocketstop.Api\Properties\AssemblyInfo.cs">
       <Link>AssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="..\Pocketstop.Api\QRCode.cs">
+      <Link>QRCode.cs</Link>
+    </Compile>
     <Compile Include="..\Pocketstop.Api\Sms.cs">
       <Link>Sms.cs</Link>
     </Compile>
